# nexus

./: Cargo.toml  README.md  justfile  nexus  output  runner.sh
cli/: Cargo.toml
cli/src/: args.rs  main.rs  output.rs  parse.rs
config/: Cargo.toml  build.rs
config/examples/: badconfig.toml  ciroh.toml  defaults.toml
config/src/: ast.rs  channel.rs  helpers.rs  lib.rs  medium.rs  module.rs  namespace.rs  parse.rs  position.rs  resources.rs  signal_model.rs  terrain.rs  time.rs  units.rs  validate.rs
config/src/validate/: mod.rs  units.rs
config/tests/accepts/: battery_with_channel_energy.toml  ciroh.toml  client_server.toml  defaults.toml  energy_framework.toml  ethernet_csma.toml  module_profile.toml  module_profile_override.toml  module_stdlib_import.toml  module_transitive.toml  module_user_override_link.toml  multi_client_single_server.toml  node_resources.toml  piecewise_solar.toml  single_client_single_server.toml  start_time.toml
config/tests/rejects/: incomplete_protocols.toml  no_protocols.toml
config/tests/rejects/defines_ideal_link/: expected.txt  nexus.toml
config/tests/rejects/invalid_distance_unit/: expected.txt  nexus.toml
config/tests/rejects/invalid_integer/: expected.txt  nexus.toml
config/tests/rejects/invalid_probability/: expected.txt  nexus.toml
config/tests/rejects/invalid_time_unit/: expected.txt  nexus.toml
config/tests/rejects/invalid_timestep_count/: expected.txt  nexus.toml
config/tests/rejects/module_unknown_profile/: expected.txt  nexus.toml
config/tests/rejects/negative_energy/: expected.txt  nexus.toml
config/tests/rejects/negative_floats/: expected.txt  nexus.toml
config/tests/rejects/no_node_position/: expected.txt  nexus.toml
config/tests/rejects/no_node_protocols/: expected.txt  nexus.toml
config/tests/rejects/no_runner_cmd/: expected.txt  nexus.toml
config/tests/rejects/unknown_initial_state/: expected.txt  nexus.toml
config/tests/rejects/unknown_source_handle/: expected.txt  nexus.toml
cpuutils/: Cargo.toml
cpuutils/src/: cpufreq.rs  cpuset.rs  errors.rs  lib.rs
doc/: INDEX.md  architecture.md  badconfig.toml  ciroh.toml  cli-reference.md  config-reference.md  crates.md  defaults.toml  energy-framework.md  gui.md  known-gaps.md  modules.md  networking.md  position-control.md  simulation-files.md  terrain-map.md  testnet.typ  trace-format.md
docs/design/: distributed-simulation.md
examples/: .gitignore
examples/arduino/: nexus.toml
examples/arduino/common/: library.json
examples/arduino/common/include/: LoraRadio.h
examples/arduino/common/src/: LoraRadio.cpp
examples/arduino/rx/: Makefile  platformio.ini
examples/arduino/rx/src/: main.cpp
examples/arduino/tx/: Makefile
examples/arduino/tx/src/: main.cpp
examples/client_server/: client.py  nexus.toml  server.py
examples/count/: Makefile  nexus.toml
examples/count/src/: main.cpp
examples/elapsed/: README.md  nexus.toml
examples/elapsed/src/: main.cpp
examples/energy_framework/: gateway.py  nexus.toml  sensor.py
examples/loopback/: loopback.py  nexus.toml
examples/mobile_nodes/: base.py  drift.py  nexus.toml  patrol.py  scout.py
examples/modules_lora_mesh/: gateway.py  nexus.toml  relay.py  sensor.py
examples/modules_mixed_network/: edge_gateway.py  field_sensor.py  indoor_node.py  local_uart.toml  nexus.toml  server.py
examples/modules_solar_sensor/: gateway.py  nexus.toml  sensor.py
examples/multi_client_single_server/: client.py  nexus.toml  server.py
examples/multihop/: client.py  nexus.toml
examples/multihop_bad_link/: client.py  nexus.toml  proxy.py  server.py
examples/multihop_same_channel/: README.md  client.py  nexus.toml  proxy.py  server.py
examples/multihop_separate_channels/: README.md  client.py  nexus.toml  proxy.py  server.py
examples/single_client_single_server/: client.py  nexus.toml  server.py
examples/sleep/: Makefile  README.md  nexus.toml
examples/sleep/src/: main.cpp
examples/tdma/: gateway.py  nexus.toml  peripheral.py
examples/time/: Makefile  README.md  nexus.toml
examples/time/src/: main.cpp
fuse/: Cargo.toml
fuse/perf/: lookup_bench.rs
fuse/src/: channel.rs  ctrl_files.rs  errors.rs  file.rs  fs.rs  lib.rs  socket.rs
gui/: Cargo.toml
gui/src/: app.rs  constants.rs  main.rs  state.rs
gui/src/config_editor/: channels.rs  links.rs  mod.rs  modules.rs  nodes.rs  params.rs  widgets.rs
gui/src/panels/: breakpoints.rs  grid.rs  inspector.rs  messages.rs  mod.rs  sequence.rs  timeline.rs  toolbar.rs
gui/src/render/: grid.rs  message.rs  mod.rs  node.rs
gui/src/sim/: bridge.rs  controller.rs  launch.rs  mod.rs  replay.rs
kernel/: Cargo.toml
kernel/perf/: router_bench.rs
kernel/src/: errors.rs  events.rs  helpers.rs  lib.rs  log.rs  networking.rs  resolver.rs  router.rs  sources.rs  test_utils.rs  types.rs
kernel/src/router/: control.rs  coordinator.rs  delivery.rs  energy.rs  energy_tests.rs  errors.rs  link_simulation.rs  messages.rs  mod.rs  partitioner.rs  posctl.rs  powerctl.rs  table.rs  timectl.rs  worker.rs
kernel/src/status/: errors.rs  health.rs  messages.rs  mod.rs
modules/batteries/: 18650.toml  cr2032.toml  lipo_1s_500mah.toml
modules/boards/: arduino_mega.toml  arduino_uno.toml  esp32_devkit.toml  esp32_s3.toml  rpi_pico.toml  rpi_zero_w.toml  stm32f4.toml
modules/energy/: energy_harvester.toml  solar_medium.toml  solar_small.toml
modules/lora/: ra01_433mhz.toml  sx1262_915mhz.toml  sx1276_868mhz.toml  sx1276_915mhz.toml
modules/wifi/: esp32_wifi.toml  wifi_2_4ghz.toml  wifi_5ghz.toml
modules/wired/: ethernet_cat5e.toml  ethernet_cat6.toml  serial_uart.toml  usb_2_0.toml
netdev/: Cargo.toml
netdev/src/: lib.rs  namespace.rs  router.rs  tap.rs
runner/: Cargo.toml
runner/src/: assignment.rs  barrier.rs  cgroupfs.rs  cgroups.rs  cli.rs  errors.rs  lib.rs  output.rs
src/: config.rs  main.rs
trace/: Cargo.toml
trace/src/: display.rs  format.rs  layer.rs  lib.rs  parse.rs  reader.rs  writer.rs
trace/tests/: parse_roundtrip.rs
