[workspace]
members = [ "cli", "config" , "fuse", "kernel", "runner"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.98"
toml = "0.8.22"
thiserror = "2.0.12"
libc = "0.2.174"
home = "0.5.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
