[workspace]
members = [ "cli", "config" , "fuse", "kernel", "runner"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
toml = "0.8"
thiserror = "2.0"
libc = "0.2"
home = "0.5"
tracing = "0.1"
chrono = "0.4"
rand = "0.9"
meval = { version = "0.2", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-serde-structured = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0" }
