[workspace]
members = [ "cli", "config" , "cpuutils", "fuse", "gui", "kernel", "runner", "trace"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
toml = "0.8"
thiserror = "2.0"
libc = "0.2"
home = "0.5"
tracing = "0.1"
chrono = "0.4"
rand = "0.9"
fuser = "0.16.0"
meval = { version = "0.2", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0" }
crossbeam-channel = "0.5"
eframe = "0.31"
egui = "0.31"
sha2 = "0.10"
serde_json = "1.0"
base64 = "0.22"
