[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
fuse = { path = "../fuse" }
runner = { path = "../runner" }
kernel = { path = "../kernel" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
csv = "1.4.0"
ctrlc = { version = "3.5.2", features = ["termination"] }
fuser = { workspace = true }
trace = { path = "../trace" }
serde_json = { workspace = true }
base64 = { workspace = true }
