[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
meval = { workspace = true }
toml = { workspace = true }
home = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.4"
