[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
meval = { workspace = true }
toml = { workspace = true }
home = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
thiserror.workspace = true
crc32fast = "1.5.0"
chrono.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
assert_cmd = "2.0"
pretty_assertions = "1.4"
tempfile = "3"
