[package]
name = "fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
fuser = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
home = { workspace = true }
tracing = { workspace = true }
runner = { version = "0.1.0", path = "../runner" }
