[package]
name = "fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
fuser = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
home = { workspace = true }
tracing = { workspace = true }
crossbeam-channel = { workspace = true }

[[bin]]
name = "lookup_bench"
path = "perf/lookup_bench.rs"
bench = false
test = false
