[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexus-gui"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }
kernel = { path = "../kernel" }
trace = { path = "../trace" }
eframe = { workspace = true }
egui = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
rfd = "0.15"
hex = "0.4"
