[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nexus-gui"
path = "src/main.rs"

[dependencies]
config = { path = "../config" }
kernel = { path = "../kernel" }
trace = { path = "../trace" }
runner = { path = "../runner" }
fuse = { path = "../fuse" }
eframe = { workspace = true }
egui = { workspace = true }
crossbeam-channel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
ctrlc = { version = "3.5.2", features = ["termination"] }
rfd = "0.15"
hex = "0.4"
