[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../config" }
runner = { path = "../runner" }
fuse = { path = "../fuse" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
mio = {version = "1.0.4", features = ["os-poll", "os-ext"] }
