[package]
name = "trace"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
